@startuml
class TarjetaDeCredito {
- numero: int
- fechaVencimiento: DateTime
- cliente: Cliente
- banco: Banco
+ setCliente(nuevo: Cliente): void
}
class Cliente {
- nombre: String
- dni: string
+ setTarjeta(nueva TarjetaDeCredito):void
}
class Banco {
-nombre: String
-cuit: string
}
TarjetaDeCredito "1" -- "1" Cliente : asociación (bi)
TarjetaDeCredito "1" o-- "1" Banco  : agregación
@enduml